# Zzz_PerfectAssist

./: .gitignore  ConformerClassfier.py  README.md  config.py  dataloader.py  dataloaderNoGray.py  deploy_validation_onnx.py  model.py  onnx_optimizer.py  onnx_simplifier.py  prediction_log.txt  preprocess.py  realTimeVideoDetect.py  realTimeVideoDetect_Cuda.py  requirements.txt  screen_show.py  torch2onxx.py  train.py  train_yolo.ipynb
deploy/: CMakeLists.txt  CMakeLists_win.txt  deploy_validation.py  onnx_deploy_test.cpp  onnx_deploy_test_win.cpp  在windows安装部署步骤.txt
deploy/onnxruntime-win-arm64-1.18.1/: CodeSignSummary-a9eaa4cc-dc7a-4bcd-aa37-77ef9f30c5f4.md  GIT_COMMIT_ID
